testsuite/tests/grammar/invalid_lkt/invalid_main_rule_annot.lkt
grammar FooGrammar {
    @main_rule ("foo") main_rule <- Example("example")
}
